- Implement hashCode() and equals() for TassaCluster - Use HashSet to skip clusters that haven't changed